# ChangeLog for net-ftp/lftp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.360 2012/05/22 15:48:49 jer Exp $

  22 May 2012; Jeroen Roovers <jer@gentoo.org> lftp-4.3.5.ebuild,
  +files/lftp-4.3.5-autopoint.patch, lftp-4.3.6.ebuild:
  Set AM_GNU_GETTEXT_VERSION by Lars Wendler (bug #417039).

  22 May 2012; Jeroen Roovers <jer@gentoo.org>
  -files/lftp-4.3.4-empty-local.patch:
  Old.

  08 May 2012; Brent Baude <ranger@gentoo.org> lftp-4.3.6.ebuild:
  Marking lftp-4.3.6 ppc64 for bug 414253

  05 May 2012; Brent Baude <ranger@gentoo.org> lftp-4.3.6.ebuild:
  Marking lftp-4.3.6 ppc for bug 414253

  03 May 2012; Markus Meier <maekke@gentoo.org> lftp-4.3.6.ebuild:
  arm stable, bug #414253

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> lftp-4.3.5.ebuild,
  lftp-4.3.6.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  03 May 2012; Jeroen Roovers <jer@gentoo.org> lftp-4.3.6.ebuild:
  Stable for HPPA (bug #414253).

  02 May 2012; Jeff Horelick <jdhore@gentoo.org> lftp-4.3.6.ebuild:
  marked x86 per bug 414253

  01 May 2012; Agostino Sarubbo <ago@gentoo.org> lftp-4.3.6.ebuild:
  Stable for amd64, wrt bug #414253

*lftp-4.3.6 (02 Apr 2012)

  02 Apr 2012; Jeroen Roovers <jer@gentoo.org> -lftp-4.3.3.ebuild,
  -lftp-4.3.4-r1.ebuild, +lftp-4.3.6.ebuild:
  Version bump.

  01 Apr 2012; Raúl Porcel <armin76@gentoo.org> lftp-4.3.5.ebuild:
  alpha/ia64/s390/sparc stable wrt #405981

  15 Mar 2012; Markus Meier <maekke@gentoo.org> lftp-4.3.5.ebuild:
  arm stable, bug #405981

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> lftp-4.3.5.ebuild:
  x86 stable wrt bug #405981

  06 Mar 2012; Brent Baude <ranger@gentoo.org> lftp-4.3.5.ebuild:
  Marking lftp-4.3.5 ppc for bug 405981

  06 Mar 2012; Jeroen Roovers <jer@gentoo.org> -lftp-4.3.1.ebuild:
  Old.

  02 Mar 2012; Brent Baude <ranger@gentoo.org> lftp-4.3.5.ebuild:
  Marking lftp-4.3.5 ppc64 for bug 405981
