@@ -6,13 +6,15 @@ AUX lftp-4.0.2.91-lafile.patch 976 RMD160 1a866fa1340bfc3d1f634cabadf44883e9a01d
 AUX lftp-4.0.3-autoconf-2.64.patch 582 RMD160 74f242cb445a790e6bd6987eef32db1cd59c0ef9 SHA1 58289a37b786b39ec23dfeabf52bc6b73802e1fb SHA256 f8e6e1d4e114d7e122b1762f9382027541357c39f129f9d2aad9edd93659f53e
 AUX lftp-4.3.5-autopoint.patch 330 RMD160 500ece3a386371e75b9220e34e55db7c3580a43b SHA1 bfa8a8269d3405f78d1ea892dc4afd0bf864326e SHA256 5aa4d9b739ffcc9a500988a7c80ca6a192d4ef440bea27278d87a27da50bf909
 DIST lftp-4.3.6.tar.xz 1401712 RMD160 b1f8a5f7e1618185a82100db2b7a0470cfb6dbdd SHA1 804865712a66c229c291a789ec68d9c26ab5546c SHA256 89821cf38428f01ce20d646654bd4352a9a037664f7068f2aa82cf1984e45473
+DIST lftp-4.3.7.tar.xz 1404336 RMD160 8015c17f4a4dc6b899b8086db76d9311be09533b SHA1 7ccd24c1de8b92e59c08b8ec2ed5143e9dbe5e09 SHA256 b77589f7274ef391f58ac683d93930b2d9a44f35e29b07e4f9d3f02ffe6185f6
 EBUILD lftp-4.3.6.ebuild 1991 RMD160 7906a11794119d9a4e8079d527ec6d3f328f5082 SHA1 551f64c326e7fa9f52cfa51b5c2d6ac332b40d14 SHA256 cc4f6200b8e52684060f19b1e1eb9850d2a64f5843ff2b5d5605cd36ae1838f4
-MISC ChangeLog 46476 RMD160 446ba25cb5f7e47da6f3b3e69afe986e87b2c4d2 SHA1 e63a4555db1048b7794bdfa8c74531c83dc96e61 SHA256 ed71c15b35ca5a6e725ed5c7a21964cb95c2930613dafdff7e7c27b61b6dc176
+EBUILD lftp-4.3.7.ebuild 1991 RMD160 8300e1082518af1f8435c3b0736083ecdd8831b6 SHA1 366471cd27c134fb884f0f87f689532ffa4a1e99 SHA256 c1cc56e526e56b92907c307a72c30e7f67674f6b76587282230eac84fd597cb6
+MISC ChangeLog 46587 RMD160 af7786fe1011fcfee6d572ba05d583d74d456854 SHA1 58aa0dfc0b110779732da3c9098d727aa382ebb2 SHA256 f9286cc69684f429097b4a3ebe3b6890adfcd6a0e3afa8dc93a07a6a579f1c0f
 MISC metadata.xml 228 RMD160 8cae9a76060d0e86296c88ea3502a4b3332785e9 SHA1 2de5cb3b0c34ae32a689804ca7524b7a71f86493 SHA256 766b4854103b92707706451db11bd895a0f63036677fdcbff2bccb8de5d6d289
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/CEvcACgkQX3X2B8XHTolpkgCfbotGbf3RMeWrsO+yEScH8x70
-xhIAmwZcDyMZnHPm+FzYP0wZUowL75nv
-=fOCW
+iEYEARECAAYFAk/LNOAACgkQX3X2B8XHToktKwCeKpQIqdla0uvwIc9mMWU9G4Hy
+iMUAoJafCFRUxb/sgKcWhIUUZIuBl4RN
+=3CJp
 -----END PGP SIGNATURE-----
