@@ -1,6 +1,11 @@
 # ChangeLog for net-ftp/lftp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.360 2012/05/22 15:48:49 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.361 2012/05/30 13:41:48 jer Exp $
+
+*lftp-4.3.7 (30 May 2012)
+
+  30 May 2012; Jeroen Roovers <jer@gentoo.org> +lftp-4.3.7.ebuild:
+  Version bump.
 
   22 May 2012; Jeroen Roovers <jer@gentoo.org> lftp-4.3.5.ebuild,
   +files/lftp-4.3.5-autopoint.patch, lftp-4.3.6.ebuild:
